# min-jvm

./: .gitignore  CMakeLists.txt  First.class.bc  First.class.od  README.md  main.c  main.h  test_first.c  test_sample.c
memo/: CallStaticMethodCallee.class.bc  CallStaticMethodCallee.class.od  CallStaticMethodCallee.java  CallStaticMethodCaller.class.bc  CallStaticMethodCaller.class.od  CallStaticMethodCaller.java  CallStaticMethodNoArg.class.bc  CallStaticMethodNoArg.class.od  CallStaticMethodNoArg.java  CallStaticMethodOneArg.class.bc  CallStaticMethodOneArg.class.od  CallStaticMethodOneArg.java  CallStaticMethodTwoArg.class.bc  CallStaticMethodTwoArg.class.od  CallStaticMethodTwoArg.java  CreateInstance.class.bc  CreateInstance.class.od  CreateInstance.java  First.class.od  First.java  InitializeClass.class.bc  InitializeClass.class.od  InitializeClass.java  InstanceFields.class.bc  InstanceFields.class.od  InstanceFields.java  JustReturn.class.bc  JustReturn.class.od  JustReturn.java  NativeMethod.h  StaticField.class.bc  StaticField.class.od  StaticField.java  StaticReferenceField.class.bc  StaticReferenceField.class.od  StaticReferenceField.java
nativelib/: CMakeLists.txt  java.c
stdlib/java/lang/: System.java
tests/: CMakeLists.txt  call_static_field.c  call_static_method_no_arg.c  call_static_method_one_arg.c  call_static_method_other_class.c  call_static_method_two_arg.c  create_instance.c  first.c  initialize_class.c  instance_fields.c  just_return.c  sample.c  static_reference_field.c
